--- a/css/app.css
+++ b/css/app.css
@@ -7,7 +7,7 @@ body {
     padding-bottom: 10px;
 }
 #MenuRecursos {
-	margin-top: 45px;
+	margin-top: 10%;
     padding: 5px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -21,6 +21,7 @@ body {
     border: 0.909090876579285px solid rgb(221, 221, 221);
     box-shadow: rgba(0, 0, 0, 0.0470588) 0px 1px 1px 0px;
 }
+
 
 /**
  * For the correct positioning of the placeholder element, the dnd-list and
