x close button en: -Recurso -Lista por actividad -Lista por asignatura -Lista por curso

--- a/css/app.css
+++ b/css/app.css
@@ -103,3 +103,13 @@ body {
     margin-top: 5px;
 }
 
+.accordion-heading {
+    position:relative
+}
+
+.btn-save {
+    position:absolute;
+    right:2px;
+    top:2px;
+}
+
