--- a/css/app.css
+++ b/css/app.css
@@ -59,7 +59,7 @@ body {
 .dndPlaceholder {
     display: block;
     background-color: #ddd;
-    min-height: 42px;
+    min-height: 50px;
 }
 
 /**
@@ -74,7 +74,7 @@ body {
     border: 1px solid #ddd;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
-    display: block;
+    display: inline;
     padding: 10px 15px;
     margin-bottom: -1px;
 
