--- a/css/app.css
+++ b/css/app.css
@@ -25,6 +25,9 @@ html,body{
     height:100%;
 }
 
+.valign { display: table; width: 100%; height: 100%; }
+.valign > div { display: table-cell; width: 100%; height: 100%; }
+.valign.bottom > div { vertical-align: bottom; }
 
 
 #lista_titu {
